fixed sizes to make it more visible on the logos

--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -64,6 +64,15 @@
         font-family: sans-serif;
         text-decoration: none;
         padding: 10px 18px;
-        border: 1px solid;
+        border: 1px solid #ffd700;
+        margin-top: 25px;
+        float: left;
+        animation: fadeIn 1s 1.8s backwards;
+        white-space: nowrap;
+
+        &:hover {
+            background: #ffd700;
+            color: #333;
+        }
     }
 }
