--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -1,6 +1,6 @@
 .nav-bar {
     background: #008000;
-    width: 60px;
+    width: 100px;
     height: 100%;
     position: absolute;
     top: 0;
@@ -14,11 +14,12 @@
         img {
             display: block;
             margin: 8px auto;
-            width: 24px;
+            width: 95px;
             height: auto;
 
             &.sub-logo {
-                width: 50px;
+                width: 95px;
+                height: 28px;
             }
         }
     }
@@ -32,6 +33,10 @@
         margin-top: -120px;
         width: 100%;
 
+        .fa-house, .fa-user, .fa-envelope {
+            height: 80%;
+        }
+
         a{
             font-size: 22px;
             color: #4d4d4e;
@@ -40,6 +45,7 @@
             height: 51px;
             position: relative;
             text-decoration: none;
+            padding-bottom: 15px;
 
             i {
                 transition: all 0.3s ease-out;
@@ -59,7 +65,7 @@
 
             &:after {
                 content: '';
-                font-size: 9px;
+                font-size: 18px;
                 letter-spacing: 2px;
                 position: absolute;
                 bottom: 0;
@@ -107,6 +113,10 @@
         margin: 0;
 
         li {
+            .fa-linkedin, .fa-github {
+                height: 50px;
+            }
+
             a {
                 padding: 7px 0;
                 display: block;
